<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hello" />

    <TextView
        android:id="@+id/tv_output_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_output_1" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="button1Click"
        android:text="@string/action_click_1" />

    <TextView
        android:id="@+id/tv_output_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_output_2" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_click_2" />

    <TextView
        android:id="@+id/tv_output_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_output_3" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_click_3" />

    <TextView
        android:id="@+id/tv_output_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_output_4" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_click_4" />

</LinearLayout>